--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ td.firstCol {
 
             <p align="justify" >
                 I am a PhD candidate at Hong Kong University of Science and Technology (HKUST).
-                I am also a visiting researher at Imperial College London.
+                I am also a visiting researcher at Imperial College London.
             </p>
  
             <p align="justify" >
