--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ td.firstCol {
                     </tr>
                     <tr>
                     <td><u>Haoyang Ma</u>, Wuqi Zhang, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
-                    <td style="text-align: right"><a href="https://arxiv.org/abs/2407.05981" target="_blank" onclick="trackOutboundLink('https:'); return false;">arXiv</a>
+                    <td style="text-align: right"><a href="https://arxiv.org/abs/2407.05981" target="_blank" onclick="trackOutboundLink('https:'); return false;">arXiv</a></td>
+                    </tr><td><font color="red">A study of 533 Solidity compiler bugs</font></td></tr>
                     </tr>
                 </tbody>
                 </table>
@@ -203,7 +204,8 @@ td.firstCol {
                     </tr>
                     <tr>
                     <td>Qingchao Shen, <u>Haoyang Ma</u>, Junjie Chen, Yongqiang Tian, Shing-Chi Cheung, Xiang Chen</td>
-                    <td style="text-align: right"><a href="papers/fse21.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">pdf</a>
+                    <td style="text-align: right"><a href="papers/fse21.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">pdf</a></td>
+                    </tr><td><font color="red">A study of 603 AI compiler bugs</font></td></tr>
                     </tr>
                 </tbody>
                 </table>
@@ -229,7 +231,8 @@ td.firstCol {
                     </tr>
                     <tr>
                     <td>Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
-                    <td style="text-align: right"><a href="https://arxiv.org/abs/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;">arXiv</a>
+                    <td style="text-align: right"><a href="https://arxiv.org/abs/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;">arXiv</a></td>
+                    <tr><td><font color="red">Found 170 model loading bugs.</font></td></tr>
                     </tr>
                 </tbody>
                 </table>
@@ -246,7 +249,8 @@ td.firstCol {
                     </tr>
                     <tr>
                     <td><u>Haoyang Ma</u>, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
-                    <td style="text-align: right"><a href="https://arxiv.org/abs/2208.02193" target="_blank" onclick="trackOutboundLink('https:'); return false;">arXiv</a>
+                    <td style="text-align: right"><a href="https://arxiv.org/abs/2208.02193" target="_blank" onclick="trackOutboundLink('https:'); return false;">arXiv</a></td>
+                    <tr><td><font color="red">Found 21 high-level optimization bugs.</font></td></tr>
                     </tr>
                 </tbody>
                 </table>
@@ -272,7 +276,7 @@ td.firstCol {
                     </tr>
                     <tr>
                     <td>Junjie Chen, <u>Haoyang Ma</u>*, Lingming Zhang</td>
-                    <td style="text-align: right"><a href="papers/ase20.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">pdf</a>
+                    <td style="text-align: right"><a href="papers/ase20.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">pdf</a></td>
                     </tr>
                 </tbody>
                 </table>
