--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ td.firstCol {
                 <table style="width: 98%"; text-align: left; margin-left: 30px">
                 <tbody>
                     <tr>
-                    <td scope="row"><strong> A Survey of Modern Compiler Fuzzing </strong></td>
+                    <td scope="row"><strong> A Survey of Modern Compiler Fuzzing (Ongoing Work) </strong></td>
                     </tr>
                     <tr>
                     <td><u>Haoyang Ma</u></td>
