--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ td.firstCol {
             </p>
 
             <p align="justify" >
-                If you are interested in my research, <br>please feel free to drop me an email at <a href="mailto:haoyang.ma@connect.ust.hk">haoyang.ma[AT]connect.ust.hk</a>
+                If you are interested in my research, <br>feel free to drop me an email at <a href="mailto:haoyang.ma@connect.ust.hk">haoyang.ma[AT]connect.ust.hk</a>
             </p>
 
             <script type="text/javascript">
