--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ td.firstCol {
         <strong> &#128073;Tianjin University </strong>: Undergraduate, Aug 2016 ~ Aug 2020<br>
 
         <h2 style="width: 100%; text-align: left;"> Services </h2>
-        Conference Paper (Co-)Reviewer: ISSTA '21 '23, AIWare '24, ISSRE' 24, ICSE' 25.
+        Conference Paper (Co-)Reviewer: ISSTA '21 '23, AIWare '24, ISSRE' 24, ICSE' 25, FSE '25.
         <br>
         Journal Paper Reviewer: TSE
 
@@ -335,6 +335,13 @@ td.firstCol {
         COMP 2011 Programming With C++ (Fall 2022-23)
         <br>
         COMP 1021 Introduction to Computer Science (Fall 2023-2024)
+
+        <h2 style="width: 100%; text-align: left;"> Award </h2>
+        HKUST Postgraduate Studentship (2021-2025)
+        <br>
+        Research Travel Grant (2023, 2024)
+        <br>
+        Overseas Research Award (2024)
 
     
     
