--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@ td.firstCol {
             <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="HaoyangMa.jpg" alt="photo" width="175" />
 
             <p align="justify" >
-                I am a PhD candidate at Hong Kong University of Science and Technology (HKUST).
-                I am also a visiting researcher at Imperial College London.
+                I am/was/going to be a
+                <br>&isin; PhD candidate at Hong Kong University of Science and Technology (HKUST), supervised by Prof. Shing-Chi Cheung.
+                <br>&isin; Visiting researcher at Imperial College London, working with Prof. Alastair F. Donaldson.
+                <br>&isin; Compiler enginner intern in SiliconFlow, Intel, and Huawei HK.
             </p>
  
             <p align="justify" >
