--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ td.firstCol {
         <strong> &#128073;Tianjin University </strong>: Undergraduate, Aug 2016 ~ Aug 2020<br>
 
         <h2 style="width: 100%; text-align: left;"> Services </h2>
-        Conference Paper (Co-)Reviewer: ISSTA '21 '23, AIWare '24, ISSRE' 24, ICSE' 25, FSE '25.
+        Conference Paper (Co-)Reviewer: ISSTA '21 '23, AIWare '24, ISSRE' 24, ICSE' 25, FSE '25, ISSTA '25.
         <br>
         Journal Paper Reviewer: TSE
 
