--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Haoyang Ma</title>
+<title>Haoyang Ma (马昊阳)</title>
 
 <meta name="google-site-verification" content="q8DtGMRIbR6QaJVsuBq_ia7dVYog6Z1o9Lwm4-AZP-w" />
 <meta name="description" content="The personal website of Haoyang Ma.">
@@ -135,7 +135,7 @@ td.firstCol {
 
             <hr style="width: 100%">
 
-            <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="HaoyangMa.jpg" alt="photo" width="175" />
+            <!-- <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="HaoyangMa.jpg" alt="photo" width="175" /> -->
 
             <p align="justify" >
                 <br>&isin; PhD candidate at Hong Kong University of Science and Technology (HKUST), supervised by Prof. Shing-Chi Cheung.
