--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ td.firstCol {
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="https://www.linkedin.com/in/haoyang-ma-a870b01b6/">Linkedin</a></b>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <b> <a href="mailto:haoyang.ma@connect.ust.hk">email</a></b>
+            <b> <a href="mailto:haoyang.ma@connect.ust.hk">Email</a></b>
             <!-- 
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="index.html#teaching"> Post & Note</a> </b>
@@ -137,7 +137,7 @@ td.firstCol {
 
             <hr style="width: 100%">
 
-            <!-- <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="HaoyangMa.jpg" alt="photo" width="175" /> -->
+            <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="WechatIMG132.jpg" alt="photo" width="175" />
 
             <p align="justify" >
                 <br>&isin; PhD candidate at Hong Kong University of Science and Technology (HKUST).
