--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ td.firstCol {
                 My research focuses on maintaining compiler correctness. Until now, I have worked on the following topics:
                 <br>&#128517;Bug analysis. (<u>Just bug surveys. Publishing them is easy for both graduation and gaining citation.</u>)
                 <br>&#128523;Bug Detection. (<u>It's always pleasurable to write random program generators based on some type theory and design mutators.</u>)
-                <br>&#128558;Bug localization. (<u>Old topic, possibly already dead? I have done a work on it for practice.</u>)
+                <br>&#128558;Bug localization. (<u>Old topic. I have done a work on it for practice.</u>)
                 <br>I am also interested in translation validation and automated reasoning
                 (Very interested to be honest).
             </p>
