--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@ td.firstCol {
             <b> <a href="https://www.linkedin.com/in/haoyang-ma-a870b01b6/">Linkedin</a></b>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="mailto:haoyang.ma@connect.ust.hk">Email</a></b>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <b> <a href="./notes.html">Notes</a></b>
             <!-- 
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="index.html#teaching"> Post & Note</a> </b>
@@ -147,8 +149,8 @@ td.firstCol {
  
             <p align="justify" >
                 My research focuses on maintaining compiler correctness. Until now, I have worked on the following topics:
-                <br>&#128517;Bug analysis. (<u>Just bug surveys. Publishing them is easy for both graduation and gaining citation.</u>)
-                <br>&#128523;Bug Detection. (<u>It's always pleasurable to write random program generators based on some type theory and design mutators.</u>)
+                <br>&#128517;Bug analysis. (<u>Good way to gain citations:)</u>)
+                <br>&#128523;Bug Detection. (<u>Pleasurable to write random program generators and design mutators.</u>)
                 <br>&#128558;Bug localization. (<u>Old topic. I have done a work on it for practice.</u>)
                 <br>I am also interested in translation validation and automated reasoning
                 (Very interested to be honest).
@@ -215,7 +217,7 @@ td.firstCol {
         <br>
         COMP 3111 Software Engineering (Spring 2021-22)
         <br>
-        COMP 2011 Programming With C++ (Fall 2022-23) <u>This genious course imposes writing C++ on papers in the final exam and let TAs cosplay as compilers&#128517;</u>
+        COMP 2011 Programming With C++ (Fall 2022-23)
         <br>
         COMP 1021 Introduction to Computer Science (Fall 2023-2024)
 
