--- a/notes.html
+++ b/notes.html
@@ -115,7 +115,7 @@ td.firstCol {
 
 <body>
 I enjoy taking notes on various topics from open-source courses.
-
-<td style="text-align: right"><a href="notes/logic4cs.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">Logic for CS</a></td>
+<br>
+<a href="notes/logic4cs.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">Logic for CS</a>
 
 </body>
