--- a/notes.html
+++ b/notes.html
@@ -117,5 +117,7 @@ td.firstCol {
 I enjoy taking notes on various topics from open-source courses.
 <br>
 <a href="notes/logic4cs.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">Logic for CS</a>
+<br>
+<a href="notes/codeforces.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;">An ongoing review of my codeforces journey</a>
 
 </body>
