--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@ td.firstCol {
                 (Very interested to be honest).
             </p>
 
+            <p align="justify" >
+                I'm now working on developing <a href="https://www.npmjs.com/package/@__haoyang__/erwin", target="_blank">Erwin</a>,
+                a bounded exhausive Solidity program generator. It has found over 20 Solidity compiler bugs and it is still on the
+                way to find more.
+            </p>
+
             <script type="text/javascript">
                 document.getElementById('address').style.display = 'none';
                 document.getElementById('address_show_link').style.display = '';
