--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@ td.firstCol {
             <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="WechatIMG132.jpg" alt="photo" width="175" />
 
             <p align="justify" >
-                <br>&isin; PhD candidate at Hong Kong University of Science and Technology (HKUST).
-                <br>&isin; Visiting researcher at Imperial College London.
-                <br>&isin; Compiler enginner intern in SiliconFlow, Intel, and Huawei HK.
+                <br>· PhD candidate at Hong Kong University of Science and Technology (HKUST).
+                <br>· Visiting researcher at Imperial College London.
+                <br>· Compiler enginner intern in SiliconFlow, Intel, and Huawei HK.
             </p>
  
             <p align="justify" >
