--- a/index.html
+++ b/index.html
@@ -142,22 +142,23 @@ td.firstCol {
             <img style="float: right; margin-left: 50px; padding-bottom: 10px;" src="WechatIMG132.jpg" alt="photo" width="175" />
 
             <p align="justify" >
-                <br>· PhD candidate at Hong Kong University of Science and Technology, <a href="http://castle.cse.ust.hk/">Castle group</a>, supervised by Shing-Chi Cheung.
-                <br>· Visiting researcher at Imperial College London, <a href="https://fastpl.doc.ic.ac.uk/">fastPL group</a>, collaborate with Alastair Donaldson.
-                <br>· Compiler engineer intern in SiliconFlow, Intel, and Huawei HK.
+                <br>PhD candidate at Hong Kong University of Science and Technology, <a href="http://castle.cse.ust.hk/">Castle group</a>
+                <br>Visiting researcher at Imperial College London, <a href="https://fastpl.doc.ic.ac.uk/">fastPL group</a>
+                <br>Compiler engineer intern in SiliconFlow, Intel, and Huawei HK.
             </p>
  
             <p align="justify" >
                 My research focuses on maintaining compiler correctness. Until now, I have worked on the following topics:
-                <br>&#128517;Bug analysis. (<u>Good way to gain citations:)</u>)
-                <br>&#128523;Bug Detection. (<u>Pleasurable to write random program generators and design mutators.</u>)
-                <br>&#128558;Bug localization. (<u>Old topic. I have done a work on it for practice.</u>)
-                <br>I am also interested in translation validation and automated reasoning
+                <br>&#128073;Bug analysis. (Dig out bug patterns from large-scale open-source projects.)
+                <br>&#128073;Bug Detection. (Random program generator, mutation-based fuzzing, etc.)
+                <br>&#128073;Bug localization. (Learning-based approaches for locating suspicious code snippets.)
+                <br>I'm also interested in <u>translation validation</u> and <u>automated reasoning</u>
                 (Very interested to be honest).
+
             </p>
 
             <p align="justify" >
-                I'm now working on developing <a href="https://www.npmjs.com/package/@__haoyang__/erwin", target="_blank">Erwin</a>,
+                I'm now working on developing <a href="https://www.npmjs.com/package/@__haoyang__/erwin", target="_blank">Erwin</a><img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin">,
                 a bounded exhausive Solidity program generator. It has found over 20 Solidity compiler bugs and it is still on the
                 way to find more.
             </p>
