--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ td.firstCol {
 
             <p align="justify" >
                 I'm now working on developing <a href="https://www.npmjs.com/package/@__haoyang__/erwin", target="_blank">Erwin</a>
-                <img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin">
+                <!-- <img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin"> -->
                 , a bounded exhausive Solidity program generator. It has found over 20 Solidity compiler bugs and it is still on the
                 way to find more.
             </p>
