--- a/index.html
+++ b/index.html
@@ -154,13 +154,16 @@ td.firstCol {
                 <br>&#128073;Bug localization. (Learning-based approaches for locating suspicious code snippets.)
                 <br>I'm also interested in <u>translation validation</u> and <u>automated reasoning</u>
                 (Very interested to be honest).
-
             </p>
 
             <p align="justify" >
-                I'm now working on developing <a href="https://www.npmjs.com/package/@__haoyang__/erwin", target="_blank">Erwin</a>
-                <!-- <img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin"> -->
-                , a bounded exhausive Solidity program generator. It has found over 20 Solidity compiler bugs and it is still on the
+                Until now, my <a href="https://sites.google.com/view/qingchaoshen">collaborator</a> and I have studied over 1000 compiler bugs (including 603 deep learning compiler bugs and 533 Solidity compiler bugs) and detected more than 150 compiler bugs (For instance, Solidity compiler bugs: <a href="https://github.com/ethereum/solidity/issues?q=author%3Ahaoyang9804">😀</a>, <a href="https://github.com/hyperledger-solang/solang/issues?q=author%3Ahaoyang9804">🙃</a>; deep learning compiler bugs: <a href="https://github.com/apache/tvm/issues?q=author%3Ajikechao">😃</a>, <a href="https://github.com/apache/tvm/issues?q=author%3Ahaoyang9804">😆</a>).
+            </p>
+
+            <p align="justify" >
+                I'm now working on developing Erwin
+                <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
+                <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin"></a>, a bounded exhausive Solidity program generator. It has found over 20 Solidity compiler bugs and it is still on the
                 way to find more.
             </p>
 
