--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@ h2 {
                 <p align="justify" >
                     I'm now working on developing Erwin
                     <a href="https://github.com/haoyang9804/Erwin"><img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/haoyang9804/Erwin"></a>
-                    <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin"></a>, a bounded exhausive Solidity program generator. It has found over 25 Solidity compiler bugs and it is still on the
+                    <!-- <a href="https://www.npmjs.com/package/@__haoyang__/erwin"><img alt="NPM Downloads" src="https://img.shields.io/npm/d18m/%40__haoyang__%2Ferwin"></a> -->
+                    , a bounded exhausive Solidity program generator. It has found over 25 Solidity compiler bugs and it is still on the
                     way to find more.
                 </p>
             </div>
