--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ h2 {
 </head>
 
 <body>
-            <h1 style="text-align:center">Haoyang Ma</h1>
+            <h1 style="text-align:center">Ma Haoyang</h1>
 
             <hr style="width: 100%">
 
