--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     /* 模态框样式 */
     .modal {
         display: none;
-        position: auto;
+        position: absolute;
         z-index: 1;
         background-color: #fefefe;
         padding: 15px;
@@ -40,7 +40,7 @@
         border-radius: 8px;
         box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         width: 180px;  /* 根据二维码尺寸调整 */
-        bottom: 100%;  /* 显示在图标上方 */
+        top: 100%;  /* 显示在图标下方 */
         left: 50%;
         transform: translateX(-50%);
     }
@@ -215,7 +215,7 @@ h2 {
             <!-- 点击微信图标触发模态框 -->
             <div class="wechat-container">
                 <b> 
-                    <a href="#" class="wechat-link">
+                    <a href="#">
                         <i class="fa-brands fa-weixin"></i>
                     </a>
                 </b>
@@ -227,12 +227,6 @@ h2 {
             </div>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="./notes.html"><i class="fa-solid fa-note-sticky"></i></a></b>
-            </div>
-
-            <!-- 模态框 -->
-            <div id="myModal" class="modal">
-                <!-- 显示微信二维码图片 -->
-                <img src="./wechat.jpg" alt="WeChat QR Code" style="max-width: 30%;">
             </div>
 
             <div class="new-container">
