--- a/index.html
+++ b/index.html
@@ -211,20 +211,18 @@ h2 {
             <b> <a href="mailto:haoyang.ma@connect.ust.hk"><i class="fa-solid fa-envelope"></i></a></b>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="https://github.com/haoyang9804"><i class="fa-brands fa-github"></i></a></b>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <!-- 点击微信图标触发模态框 -->
+            <!-- &nbsp;&nbsp;&nbsp;&nbsp;
             <div class="wechat-container">
                 <b> 
                     <a href="#">
                         <i class="fa-brands fa-weixin"></i>
                     </a>
                 </b>
-                <!-- 模态框移动到容器内部 -->
                 <div class="modal">
                     <img src="./wechat.jpg" alt="WeChat QR Code">
                     <p style="margin:10px 0 0; color: #666; font-size: 0.9em;">Scan to add me</p>
                 </div>
-            </div>
+            </div> -->
             &nbsp;&nbsp;&nbsp;&nbsp;
             <b> <a href="./notes.html"><i class="fa-solid fa-note-sticky"></i></a></b>
             </div>
