--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
         to { opacity: 1; transform: translate(-50%, 0); }
     }
 </style>
+
+<style>
+    .paper-tag {
+        background-color: #6B8EB8;
+        color: #000000;
+        padding: 5px 6px;
+        border-radius: 2px;
+        font-family: Arial, sans-serif;
+        font-weight: bold;
+        font-size: 10px;
+        display: inline-block;
+    }
+</style>
+
 </head>
 
 <style type="text/css">
@@ -275,31 +289,31 @@ h2 {
         <table style="width: 100%;">
             <tbody>
               <tr>
-                <td scope="row"><strong> [ICSE '25] A Tale of Two DL Cities: When Library Tests Meet Compiler </strong>Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
+                <td scope="row"><strong> <div class="paper-tag">ICSE '25</div> A Tale of Two DL Cities: When Library Tests Meet Compiler </strong>Qingchao Shen, Yongqiang Tian, <u>Haoyang Ma</u>, Junjie Chen, Lili Huang, Ruifeng Fu, Shing-Chi Cheung, Zan Wang</td>
                 <td style="text-align: right"><a href="https://arxiv.org/abs/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> [ISSTA '24] Towards Understanding Solidity Compiler Bugs</strong> <u>Haoyang Ma</u>, Wuqi Zhang, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
+                <td scope="row"><strong> <div class="paper-tag">ISSTA '24</div> Towards Understanding Solidity Compiler Bugs</strong> <u>Haoyang Ma</u>, Wuqi Zhang, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2407.16626" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> [ISSTA '23] Fuzzing Deep Learning Compilers with HirGen </strong> <u>Haoyang Ma</u>, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
+                <td scope="row"><strong> <div class="paper-tag">ISSTA '23</div> Fuzzing Deep Learning Compilers with HirGen </strong> <u>Haoyang Ma</u>, Qingchao Shen, Yongqiang Tian, Junjie Chen, Shing-Chi Cheung</td>
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2208.02193" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> [FSE '21] A Comprehensive Study of Deep Learning Compiler Bugs </strong> Qingchao Shen, <u>Haoyang Ma</u>, Junjie Chen, Yongqiang Tian, Shing-Chi Cheung, Xiang Chen</td>
+                <td scope="row"><strong> <div class="paper-tag">FSE '21</div> A Comprehensive Study of Deep Learning Compiler Bugs </strong> Qingchao Shen, <u>Haoyang Ma</u>, Junjie Chen, Yongqiang Tian, Shing-Chi Cheung, Xiang Chen</td>
                 <td style="text-align: right"><a href="papers/fse21.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> [ASE '20] Enhanced Compiler Bug Isolation via Memoized Search </strong> Junjie Chen, <u>Haoyang Ma*</u>, Lingming Zhang</td>
+                <td scope="row"><strong> <div class="paper-tag">ASE '20</div> Enhanced Compiler Bug Isolation via Memoized Search </strong> Junjie Chen, <u>Haoyang Ma*</u>, Lingming Zhang</td>
                 <td style="text-align: right"><a href="papers/ase20.pdf" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> [pre-print] A Survey of Modern Compiler Fuzzing </strong></td>
+                <td scope="row"><strong> <div class="paper-tag">Pre-print</div> A Survey of Modern Compiler Fuzzing </strong></td>
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2306.06884" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
               <tr>
-                <td scope="row"><strong> [pre-print] From Informal to Formal--Incorporating and Evaluating LLMs on Natural Language Requirements to Verifiable Formal Proofs </strong> Jialun Cao, Yaojie Lu, Meiziniu Li, <u>Haoyang Ma</u>, Haokun Li, Mengda He, Cheng Wen, Le Sun, Hongyu Zhang, Shengchao Qin, Shing-Chi Cheung, Cong Tian</td>
+                <td scope="row"><strong> <div class="paper-tag">Pre-print</div> From Informal to Formal--Incorporating and Evaluating LLMs on Natural Language Requirements to Verifiable Formal Proofs </strong> Jialun Cao, Yaojie Lu, Meiziniu Li, <u>Haoyang Ma</u>, Haokun Li, Mengda He, Cheng Wen, Le Sun, Hongyu Zhang, Shengchao Qin, Shing-Chi Cheung, Cong Tian</td>
                 <td style="text-align: right"><a href="https://arxiv.org/pdf/2501.16207" target="_blank" onclick="trackOutboundLink('https:'); return false;"><i class="fa-solid fa-file-pdf"></i></a></td>
               </tr>
             </tbody>
@@ -307,12 +321,12 @@ h2 {
           <p style="font-size: smaller; margin-top: 10px;"><sup>*</sup> indicates co-first authorship.</p>
     
         <h2 style="width: 100%; text-align: left;"> Experience </h2>
-        <strong> &#128073;Huawei HK (upcoming)</strong>: Research Intern, June 2025 ~ <i class="fa-solid fa-infinity"></i><br>
-        <strong> &#128073;Imperial College London </strong>: Visiting Researcher, Sep 2024 ~ Feb 2025<br>
-        <strong> &#128073;Intel </strong>: Compiler Engineer Intern, Feb 2024 ~ Jul 2024<br>
-        <strong> &#128073;SiliconFlow </strong>: AI Framework Development Intern, Dec 2023 ~ Feb 2024<br>
-        <strong> &#128073;HKUST </strong>: PhD Candidate, Sep 2021 ~ Dec 2025 (expected)<br>
-        <strong> &#128073;Tianjin University </strong>: Undergraduate, Aug 2016 ~ Aug 2020<br>
+        <strong> Huawei HK (upcoming)</strong>: Research Intern, June 2025 ~ <i class="fa-solid fa-infinity"></i><br>
+        <strong> Imperial College London </strong>: Visiting Researcher, Sep 2024 ~ Feb 2025<br>
+        <strong> Intel </strong>: Compiler Engineer Intern, Feb 2024 ~ Jul 2024<br>
+        <strong> SiliconFlow </strong>: AI Framework Development Intern, Dec 2023 ~ Feb 2024<br>
+        <strong> HKUST </strong>: PhD Candidate, Sep 2021 ~ Dec 2025 (expected)<br>
+        <strong> Tianjin University </strong>: Undergraduate, Aug 2016 ~ Aug 2020<br>
 
         <h2 style="width: 100%; text-align: left;"> Services </h2>
         Conference Paper (Co-) Reviewer: ISSTA '21 '23, AIWare '24, ISSRE' 24, ICSE' 25, FSE '25, ISSTA '25.
