--- a/index.html
+++ b/index.html
@@ -340,7 +340,9 @@ h2 {
         <br>
         COMP 2011 Programming With C++ (Fall 2022-23)
         <br>
-        COMP 1021 Introduction to Computer Science (Fall 2023-2024)
+        COMP 1021 Introduction to Computer Science (Fall 2023-24)
+        <br>
+        COMP 2011 Programming With C++ (Spring 2024-25)
 
         <h2 style="width: 100%; text-align: left;"> Award </h2>
         HKUST Postgraduate Studentship (2021-2025)
