--- a/index.html
+++ b/index.html
@@ -66,14 +66,20 @@
 
 <style>
     .paper-tag {
-        background-color: #6B8EB8;
+        background-color: rgb(241, 153, 188);
         color: #000000;
-        padding: 5px 6px;
-        border-radius: 2px;
+        padding: 1px 1px;
+        border-radius: 1px;
         font-family: Arial, sans-serif;
         font-weight: bold;
         font-size: 10px;
         display: inline-block;
+        text-align: center;     
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 20px;
+        overflow: hidden;
     }
 </style>
 
@@ -245,8 +251,8 @@ h2 {
                 <!-- <div class="left-column"> -->
                     <!-- <h2 style="width: 100%; text-align: left;"> Bio </h2> -->
                     <p align="justify" >
-                        <br>PhD candidate at Hong Kong University of Science and Technology, <a href="http://castle.cse.ust.hk/">Castle group</a>, supervised by <a href="https://www.cse.ust.hk/~scc/">S.C. CHEUNG</a>.
-                        <br>Visiting researcher at Imperial College London, <a href="https://fastpl.doc.ic.ac.uk/">fastPL group</a>, advised by <a href="https://www.doc.ic.ac.uk/~afd/">Alastair F. Donaldson</a>.
+                        <br>PhD candidate at Hong Kong University of Science and Technology, <a href="http://castle.cse.ust.hk/">Castle group</a>.
+                        <br>Visiting researcher at Imperial College London, <a href="https://fastpl.doc.ic.ac.uk/">fastPL group</a>.
                     </p>
          
                     <p align="justify" >
